[package]
name = "solar_system_glow"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
repository = "https://github.com/Dhruvesh08/iced-solar-system"
homepage = "https://github.com/Dhruvesh08/iced-solar-systemc"
publish = false

[dependencies]
iced = { version = "0.10.0", features = ["canvas", "tokio", "debug"] }
env_logger = "0.10.0"
rand = "0.8.3"
iced_glow = "0.8.0"
